# operations-tooling

./: README.md
.github/workflows/: CI.yml
server/: .env.example  README.md  pyproject.toml
server/app/api/: main.py  routes.py
server/app/controllers/: students.py
server/app/models/: grades.py  students.py
server/app/sandbox/: test.json
server/app/services/: students.py
server/app/utils/: boolean_clause.py  database.py  gpa.py
